# Delivery-pet-project

./: LICENSE  README.md  pyproject.toml
app/: lifespan.py  main.py
