[project]
name = "delivery-pet-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.112",

    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13"
]


[project.optional-dependencies]
dev = [
    "mypy>=1.10"
]


[tool.ruff]
line-length = 72
target-version = "py314"


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta" 